# imgui_app_template

./: .gitignore  CMakeLists.txt  mct_project_info.json
src/cpp/: main.cpp
